fix mobile input button spacing

--- a/components/form/body/row/AccordionContent.module.scss
+++ b/components/form/body/row/AccordionContent.module.scss
@@ -27,6 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 90%;
   }
 
 }
