--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -125,7 +125,6 @@ $form-inner-padding: 74px;
     min-width: 48px;
     width: 48px;
     height: 48px;
-    margin: 14px auto;
   }
 }
 
